Fix netapp logo

--- a/beta/index.html
+++ b/beta/index.html
@@ -131,7 +131,7 @@ students usually come from varied educational and cultural backgrounds</p>
  <li> <a href="#"> <img src="assets/img/logo/Mitsui Chemicals.png" alt="" class="color-img" /><img src="assets/img/logo/Mitsui Chemicals_gray.png" alt="" /></a></li>
  <li> <a href="#"> <img src="assets/img/logo/Morgan.Stanley.png" alt="" class="color-img" /><img src="assets/img/logo/Morgan.Stanley_gray.png" alt="" /></a></li>
  <li> <a href="#"> <img src="assets/img/logo/NVIDIA.png" alt="" class="color-img" /><img src="assets/img/logo/NVIDIA_gray.png" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Netapp.India._gray.png" alt="" class="color-img" /><img src="assets/img/logo/Netapp.India.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Netapp.India.png" alt="" class="color-img" /><img src="assets/img/logo/Netapp.India_gray.png" alt="" /></a></li>
  <li> <a href="#"> <img src="assets/img/logo/Renishaw.png" alt="" class="color-img" /><img src="assets/img/logo/Renishaw_gray.png" alt="" /></a></li>
  <li> <a href="#"> <img src="assets/img/logo/Samsung.png" alt="" class="color-img" /><img src="assets/img/logo/Samsung_gray.png" alt="" /></a></li>
  <li> <a href="#"> <img src="assets/img/logo/TVS Motors.png" alt="" class="color-img" /><img src="assets/img/logo/TVS Motors_gray.png" alt="" /></a></li>
