Experiment removing past recruiters

--- a/2013-14/index.html
+++ b/2013-14/index.html
@@ -101,7 +101,7 @@ students usually come from varied educational and cultural backgrounds</p>
     <!-- Our Clients -->
     <div id="clients-flexslider" class="flexslider home clients">
         <div class="headline"><h3>Past Recruiters</h3></div>    
-        <ul class="slides slide-logo">
+        <!--<ul class="slides slide-logo">
  <li> <a href="#"> <img src="assets/img/logo/Accenture.png" alt="" class="color-img" /><img src="assets/img/logo/Accenture_gray.png" alt="" /></a></li>
  <li> <a href="#"> <img src="assets/img/logo/Adobe.png" alt="" class="color-img" /><img src="assets/img/logo/Adobe_gray.png" alt="" /></a></li>
  <li> <a href="#"> <img src="assets/img/logo/Amazon.png" alt="" class="color-img" /><img src="assets/img/logo/Amazon_gray.png" alt="" /></a></li>
@@ -139,7 +139,7 @@ students usually come from varied educational and cultural backgrounds</p>
  <li> <a href="#"> <img src="assets/img/logo/facebook.png" alt="" class="color-img" /><img src="assets/img/logo/facebook_gray.png" alt="" /></a></li>
 
 
-        </ul>
+        </ul>-->
     </div><!--/flexslider-->
     <!-- //End Our Clients -->
 </div><!--/container-->     
