Correct text error

--- a/2013-14/about_us.html
+++ b/2013-14/about_us.html
@@ -136,13 +136,18 @@
     <tbody>
     <tr>
   <td > Ankita Jain </td>
-<td >Prepartion Co-ordinator</td> <td ><a href="mailto:mailto:ankijain@iitk.ac.in" target="_parent">ankijain@iitk.ac.in</a></td>
+<td >Preparation Co-ordinator</td> <td ><a href="mailto:mailto:ankijain@iitk.ac.in" target="_parent">ankijain@iitk.ac.in</a></td>
  <td >+91 9621564400</td>
 </tr>
  <tr>
   <td > Anchal Goyal </td>
-<td >Prepartion Co-ordinator</td> <td ><a href="mailto:anchalg@iitk.ac.in" target="_parent">anchalg@iitk.ac.in</a></td>
+<td >Preparation Co-ordinator</td> <td ><a href="mailto:anchalg@iitk.ac.in" target="_parent">anchalg@iitk.ac.in</a></td>
 <td >+91 7607457002</td>
+</tr>
+<tr>
+  <td > Rohit Kakkar</td>
+<td >Preparation Co-ordinator</td><td class=xl168><a href="mailto:rohitka@iitk.ac.in" target="_parent"> rohitka@iitk.ac.in </td>
+<td >+91 9621226205</td>
 </tr>
 
 
@@ -212,11 +217,7 @@
 <td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:rachitja@iitk.ac.in" target="_parent"> rachitja@iitk.ac.in </td>
 <td >+91 9554884757</td>
 </tr>
-<tr>
-  <td > Rohit Kakkar</td>
-<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:rohitka@iitk.ac.in" target="_parent"> rohitka@iitk.ac.in </td>
-<td >+91 9621226205</td>
-</tr>
+
 <tr>
   <td > Chetan Chauhan </td>
 <td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:chetanc@iitk.ac.in" target="_parent"> chetanc@iitk.ac.in </td>
