--- a/2013-14/index.html
+++ b/2013-14/index.html
@@ -27,9 +27,9 @@
             <!-- Our Services -->
             <div class="row-fluid">
                 <div class="headline"><h3>About Us</h3></div>
-                <p>The Indian Institute of Technology Kanpur (IITK) is well known for its academic excellence and is often considered as the 'first stop' for a large number of industries and other organizations for recruiting undergraduate and post-graduate students. We truly appreciate the faith bestowed on us from several organizations and we look forward to continuing our relationship with them.</p>
+                <p>The Indian Institute of Technology Kanpur is well known for its academic excellence and is often considered as the 'first stop' for a large number of industries and other organizations for recruiting undergraduate and post-graduate students. We truly appreciate the faith bestowed on us from several organizations and we look forward to continuing our relationship with them.</p>
 
-                <p>The Students Placement Office (SPO) is run and managed by an efficient team of office staff &amp; students and handles all aspects of placements at IIT Kanpur. Right from contacting companies to managing all logistics of arranging for tests, pre-placement talks and conducting final interviews the SPO team provides it's best possible assistance to the recruiters. The hospitality and the functioning of SPO is applauded and well received by the visiting recruiters every year. With over 2000 companies contacted each year SPO has maintained a prolific placement record among all IITs despite the recession during the past couple of years.</p>
+                <p>The Students' Placement Office (SPO) is run and managed by an efficient team of office staff &amp; students and handles all aspects of placements at IIT Kanpur. Right from contacting companies to managing all logistics of arranging for tests, pre-placement talks and conducting final interviews the SPO team provides it's best possible assistance to the recruiters. The hospitality and the functioning of SPO is applauded and well received by the visiting recruiters every year.</p>
 
                 <!--
                 <div class="row-fluid servive-block servive-block-in">
