--- a/2013-14/_sidebar.html
+++ b/2013-14/_sidebar.html
@@ -12,7 +12,8 @@
     <div class="who margin-bottom-30">
         <div class="headline"><h3>Quick Contacts</h3></div>
         <ul class="unstyled">
-            <li><a href="#"><i class="icon-phone"></i> +91 259 255 33 44</a></li>
+            <li><a href="#"><i class="icon-phone"></i> +91 512 259 33 44</a>
+            </li>
             <li><a href="#"><i class="icon-envelope-alt"></i> spo@iitk.ac.in</a></li>
             <li><a><i class="icon-map-marker"></i> &nbsp;109, Outreach Building, IIT Kanpur</a></li>
         </ul>
