Add alumni to navbar

--- a/2013-14/about_iitk.html
+++ b/2013-14/about_iitk.html
@@ -270,7 +270,7 @@ path {
         </div>
     </div>
 
-    <div class="one-page-inner one-default" id="research">
+    <div class="one-page-inner one-default" id="alumni">
       <div class="container">
         <h1>Alumni</h1>
         <div class="row-fluid">
