--- a/2013-14/_navbar.html
+++ b/2013-14/_navbar.html
@@ -29,6 +29,7 @@
                                 <li><a href="about_iitk.html#faculty">Faculty</a></li>
                                 <li><a href="about_iitk.html#research">Research</a></li>
                                 <li><a href="about_iitk.html#extra-curriculars">Extra-Curriculars</a></li>
+                                <li><a href="about_iitk.html#alumni">Alumni</a></li>
                             </ul>
                             <b class="caret-out"></b>                        
                         </li>
