Change footer phone number

--- a/2013-14/_footer.html
+++ b/2013-14/_footer.html
@@ -29,7 +29,7 @@
 					109,Outreach Building,<br />
 					IIT Kanpur, Kanpur-208016<br />
 					UP, India.<br />
-					Phone: +91 512 259 44 33/34<br />
+					Phone: +91 512 259 33 44<br />
 					Email: <a href="mailto:spo@iitk.ac.in" class="">spo@iitk.ac.in</a>
                 </address>
 
