Remove policy of Dual 4

--- a/2013-14/intern_policy.html
+++ b/2013-14/intern_policy.html
@@ -25,7 +25,7 @@
 
     <div class="headline"><h4>Eligibility</h4></div>
     <ul>
-      <li>Only <strong>3rd year Undergraduate or 4th year M.Sc. Integrated students</strong> can apply for internships through SPO. <strong>4th year Dual Degree students may be allowed</strong> for appearing if they are able to get a <strong>No Objection Certificate from their thesis guide</strong> at the time of application for the respective internship.</li>
+      <li>Only <strong>3rd year Undergraduate or 4th year M.Sc. Integrated students</strong> can apply for internships through SPO. <!-- <strong>4th year Dual Degree students may be allowed</strong> for appearing if they are able to get a <strong>No Objection Certificate from their thesis guide</strong> at the time of application for the respective internship.--></li>
       <li>Student can register only once during an academic year.</li>
     </ul>
     </div><!--/row-fluid-->
@@ -37,7 +37,7 @@
       <li> If a student gets an <strong>Internship from anywhere other than the SPO</strong>, he must inform the SPO as soon as possible by <strong>dropping a mail to <a href="mailto:sposecy@iitk.ac.in"><strong>sposecy@iitk.ac.in</strong></a></strong> so that all his applications for Internship could be withdrawn.</li>
       <li> A student who  <strong>leaves the Internship of SPO</strong> before or during the stipulated internship period after getting selected, shall be termed as an <strong>Internship Defaulter</strong>. An Internship Defaulter shall be subjected to a penalty of being allowed to <strong>sit for only two companies in the first week (7 days) of placement season.</strong></li>
       <li> If a student directly contacts a Company that comes through SPO, then it would be considered as an Off-Campus attempt.</li>
-      <li> In case of <strong>4th year Dual Degree students</strong>, if their Thesis Advisor withdraws the No Objection Certificate at a later stage, and the student does not complete his internship citing the same as reason, he <strong>would be dealt with as an internship defaulter.</strong> </li>
+      <!--<li> In case of <strong>4th year Dual Degree students</strong>, if their Thesis Advisor withdraws the No Objection Certificate at a later stage, and the student does not complete his internship citing the same as reason, he <strong>would be dealt with as an internship defaulter.</strong> </li>-->
       <li> If a student gets <strong>more than one offer in a single day</strong> then he has the option of <strong>choosing between them</strong> at the end of the day. The choice must be communicated to the SPO after the decision has been made.</li>
       <li> <strong>Discrepancies, false claims or any objectionable content</strong> found in the resumes of a student would prevent him/her from taking part in any of the placement activities for that season and make him/her an <strong>Internship Defaulter.</strong><br />
       * <small>Genuine reasons include health problems, academic clashes or other reasons subject to approval of Chairman, SPC</small></li>
