--- a/2013-14/brochures.html
+++ b/2013-14/brochures.html
@@ -31,21 +31,21 @@
     <div class="row-fluid">
       <h4>Aerospace Engineering
       <span class="pull-right">
-        <a href="assets/docs/Aero.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/AE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
     <div class="row-fluid">
       <h4>Biological Science &amp; Engineering
       <span class="pull-right">
-        <a href="assets/docs/Bsbe.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/BSBE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
     <div class="row-fluid">
       <h4>Chemical Engineering
       <span class="pull-right">
-        <a href="assets/docs/Chm.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="#" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -77,7 +77,7 @@
     <div class="row-fluid">
       <h4> Design Programme
       <span class="pull-right">
-        <a href="assets/docs/Desing.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/MDES_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -85,7 +85,7 @@
     <div class="row-fluid">
       <h4>Economics
       <span class="pull-right">
-        <a href="assets/docs/Eco.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/ECO_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -117,7 +117,7 @@
     <div class="row-fluid">
       <h4>Laser Technology
       <span class="pull-right">
-        <a href="assets/docs/Celp.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/LT_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -133,7 +133,7 @@
     <div class="row-fluid">
       <h4>Material Sciences &amp; Engineering
       <span class="pull-right">
-        <a href="assets/docs/Mame.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/MSE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -141,7 +141,7 @@
     <div class="row-fluid">
       <h4>Materials Science Programme
       <span class="pull-right">
-        <a href="assets/docs/Msp.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/MSP_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -149,7 +149,7 @@
     <div class="row-fluid">
       <h4>Mechanical Engineering
       <span class="pull-right">
-        <a href="assets/docs/Brochure_ME.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/ME_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -157,7 +157,14 @@
     <div class="row-fluid">
       <h4>Mathematics &amp; Scientifice Computing
       <span class="pull-right">
-        <a href="assets/docs/Mth.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/MSC_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
+      </span></h4>
+    </div>
+    <div class="row-fluid">
+      <h4>Nuclear Eng. &amp; Technology
+      <span class="pull-right">
+        <a href="assets/docs/NET_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
