--- a/2013-14/about_us.html
+++ b/2013-14/about_us.html
@@ -423,13 +423,14 @@
 
 </tr>
 
- 
+<!-- 
  <tr>
+
   <td > Amalladinne Vamsi Krishna </td>
 <td >Electrical Engineering</td>
 <td ><a href="mailto:vamsikr@iitk.ac.in">vamsikr@iitk.ac.in</td>
 <td >+91 8874356844</td>
-
+-->
 </tr>
  <tr>
   <td > Amrita Bal </td>
@@ -439,6 +440,14 @@
 
 </tr>
  <tr>
+
+  <td >Shibir Basak </td>
+<td >Electrical Engineering</td>
+<td ><a href="mailto:shibir@iitk.ac.in">shibir@iitk.ac.in</td>
+<td >+91 9793564116</td>
+
+ <tr>
+
   <td > Shreyan Chowdhury </td>
 <td >Electrical Engineering</td>
 <td ><a href="mailto:shreyan@iitk.ac.in">shreyan@iitk.ac.in</td>
